2017-02-02  Ryan Haddad  <ryanhaddad@apple.com>

        Marking http/tests/inspector/worker/blob-script-with-cross-domain-imported-scripts.html as flaky.
        https://bugs.webkit.org/show_bug.cgi?id=167607

        Unreviewed test gardening.

        * platform/mac-wk2/TestExpectations:

2017-02-02  David Kilzer  <ddkilzer@apple.com>

        Clean up accessibility & animations tests to stop calling testRunner.waitUntilDone() twice
        <https://webkit.org/b/167598>

        Reviewed by Alexey Proskuryakov.

        * accessibility/frame-disconnect-textmarker-cache-crash.html:
        * accessibility/loading-iframe-sends-notification.html:
        * accessibility/mac/combobox-activedescendant-notifications.html:
        * accessibility/mac/ordered-textmarker-crash.html:
        * accessibility/mac/stale-textmarker-crash.html:
        * accessibility/notification-listeners.html:
        * accessibility/scroll-to-global-point-iframe-nested.html:
        * accessibility/scroll-to-global-point-iframe.html:
        * accessibility/scroll-to-make-visible-iframe.html:
        * accessibility/svg-element-press.html:
        - Remove call to testRunner.waitUntilDone() since
          window.jsTestIsAsync is set to true, and thus waitUntilDone()
          is called from either js-test.js or js-test-post.js.

        * animations/animation-delay-changed.html:
        * animations/change-keyframes-name.html:
        * animations/font-variations/font-variation-settings-order.html:
        * animations/font-variations/font-variation-settings-unlike.html:
        * animations/font-variations/font-variation-settings.html:
        * animations/longhand-timing-function.html:
        * animations/transition-and-animation-3.html:
        * animations/unanimated-style.html:
        - Remove call to testRunner.waitUntilDone() since that's moved
          into animation-test-helpers.js.

        * animations/resources/animation-test-helpers.js: