@@ -7,12 +7,12 @@
         background-color: green;
     }
     #filter {
-            position: absolute;
-            width: 200px;
-            height: 200px;
-            transform: translatez(0);
-            -webkit-clip-path: circle(25px at 225px);
-            -webkit-backdrop-filter: invert();
+        position: absolute;
+        width: 200px;
+        height: 200px;
+        transform: translateZ(0);
+        -webkit-clip-path: circle(80px at 100px);
+        -webkit-backdrop-filter: invert();
     }
 </style>
 <div id="box"></div>
