@@ -10,8 +10,8 @@
         position: absolute;
         width: 200px;
         height: 200px;
-        transform: translatez(0);
-        -webkit-clip-path: circle(25px at 225px);
+        transform: translateZ(0);
+        -webkit-clip-path: circle(80px at 100px);
     }
     .backdrop {
         -webkit-backdrop-filter: invert();
